--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Linter
+name: CI
 
 on:
   - push
@@ -18,18 +18,13 @@ jobs:
         node-version: [13.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
     - name: npm install, build
-      # Install and build project
+      # Install and buld project
       run: |
         make install
       # Add environment variables
       env:
-        CI: true
-    - name: Run Linter
-      run: |
-        make lint
+          CI: true
+    - name: Run linter
+      # Run linter
+      run: make lint
