--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -1,29 +1,28 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# This is a basic workflow to help you get started with Actions
 
-name: Linter
+name: CI
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
   - push
   - pull_request
 
-
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
-
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Git clone my repo
-      run: actions/checkout@v2
-      
-    - name: make
-      # Install and buld project
-      run: |
-        make install
-      # Add environment variables
-      env:
-          CI: true
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    # Install and build project
+    - name: npm install, build
+      run: make install
+    # Runs a single command using the runners shell
     - name: Run linter
-      # Run linter
+        # Run Linter
       run: make lint
