--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "type": "module",
   "dependencies": {
-    "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "readline-sync": "^1.4.10"
   },
@@ -24,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/IlliaTemnov/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/IlliaTemnov/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/IlliaTemnov/frontend-project-lvl1#readme",
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-plugin-react": "^7.20.3"
+  }
 }
