--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -20,7 +20,7 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     # Install and build project
-    - name: npm install, build, eslint
+    - name: npm install, build
       run: make install
     # Runs a single command using the runners shell
     - name: Run linter
