--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
   },
   "type": "module",
   "dependencies": {
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
     "readline-sync": "^1.4.10"
   },
   "repository": {
@@ -28,6 +30,7 @@
   "homepage": "https://github.com/IlliaTemnov/frontend-project-lvl1#readme",
   "devDependencies": {
     "eslint": "^7.5.0",
-    "eslint-plugin-react": "^7.20.3"
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
