--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,13 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-          - name: npm install, build
-          run: |
-          make install
-        env:
-          CI: true
+
+      - name: npm install
+        run: make install
       - name: Run linter
-        run: |
-          make lint
+         run: make lint
