--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,16 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-
-      - name: npm install
-        run: make install
-      - name: Run linter
-        run: make lint
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14.5"
+          check-latest: true
+      - run: npm install
+      - run: npm test
